frontend/solana-usdc-ui/src/index.css
body {
  margin: 0;
  display: flex;

  font-family: Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(25, 25, 25, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Table Container */
.txn-table {
  border-collapse: separate;
  border-spacing: 0;
  border-radius: 10px;
  overflow: hidden;
  width: 100%;
  margin: 1rem 0;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
  background-color: #ffffff;
}

/* Table Header */
.txn-table thead th {
  background-color: #3498db;
  color: #ffffff;
  font-weight: bold;
  font-size: 3.2em;
  padding: 12px 15px;
  text-align: left;
  border-bottom: 2px solid #2980b9;
}

/* Slot Header */
.slot-hdr {
  background-color: #444444;
  color: #eeeeee;
  font-weight: bold;
  padding: 12px 15px;
  text-align: left;
}

/* Table Header - First and Last Cells */
.txn-table thead th:first-child {
  border-top-left-radius: 10px;
}

.txn-table thead th:last-child {
  border-top-right-radius: 10px;
}

/* Table Body */
.txn-table tbody tr {
  border-bottom: 1px solid #dddddd;
}

/* Alternating Row Colors */
.txn-table tbody tr:nth-child(even) {
  background-color: #ddd;
}

.txn-table tbody tr:nth-child(odd) {
  background-color: #eee;
}

/* Hover Effect */
.txn-table tbody tr:hover {
  background-color: #ffffee;
  transition: background-color 0.3s ease;
}

/* Table Cells */
.txn-table td {
  padding: 12px 15px;
}

/* Last Row - Bottom Corners */
.txn-table tbody tr:last-child td:first-child {
  border-bottom-left-radius: 10px;
}

.txn-table tbody tr:last-child td:last-child {
  border-bottom-right-radius: 10px;
}

.search-term {
  padding: "8px";
  border-radius: 10px;
  width: 30em;
  border: "1px solid #ccc";
  font-size: large;
  padding: 10px;
}

.sig-label {
  font-size: large;
  color: antiquewhite;
}

